[gd_scene load_steps=6 format=3 uid="uid://3s8g0o8i7fom"]

[ext_resource type="Theme" uid="uid://dkeqhsnkx3w0s" path="res://Art/DefaultTheme.tres" id="1_3eni6"]
[ext_resource type="Script" path="res://Scripts/level_select.gd" id="2_py6qe"]
[ext_resource type="Texture2D" uid="uid://c8thx41dmja1g" path="res://Art/1.png" id="2_syw8m"]
[ext_resource type="Texture2D" uid="uid://bl5ox88rw06o4" path="res://Art/2.png" id="3_84h4x"]
[ext_resource type="Texture2D" uid="uid://idwwjhq6jqtg" path="res://Art/2-disabled.png" id="5_jjnjt"]

[node name="LevelSelect" type="CenterContainer"]
offset_right = 1288.0
offset_bottom = 720.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_3eni6")
script = ExtResource("2_py6qe")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_3eni6")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("1_3eni6")
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_3eni6")
text = "Select a Board:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_3eni6")
theme_override_constants/h_separation = 25
columns = 2

[node name="ButtonOne" type="TextureButton" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_syw8m")

[node name="ButtonTwo" type="TextureButton" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("3_84h4x")
texture_disabled = ExtResource("5_jjnjt")

[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/ButtonOne" to="." method="_on_button_one_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GridContainer/ButtonTwo" to="." method="_on_button_two_pressed"]
